--- a/src/app/core/components/loading/loading.component.html
+++ b/src/app/core/components/loading/loading.component.html
@@ -1,1 +1,1 @@
-<mat-progress-bar [mode]="'indeterminate'" [value]="50"></mat-progress-bar>
+<mat-progress-bar [mode]="'buffer'" [color]="'accent'"></mat-progress-bar>
