switcher create component

--- a/src/app/features/switchers/sites/switchers-site/switchers-site.component.html
+++ b/src/app/features/switchers/sites/switchers-site/switchers-site.component.html
@@ -1,1 +1,6 @@
-<app-switchers-list [switchers]="switchersService.switchers | async"></app-switchers-list>
+<mat-toolbar>
+  <span>Switchers</span>
+</mat-toolbar>
+<app-switchers-list [switchers]="switchersService.switchers | async" (switcherUpdated)="onNewSwitcher($event)"
+  (stateChanged)="onTouch($event)" (remove)="deleteSwitcher($event)">
+</app-switchers-list>
