delete sensor modal

--- a/src/app/features/switchers/components/manipulate-switcher/manipulate-switcher.component.html
+++ b/src/app/features/switchers/components/manipulate-switcher/manipulate-switcher.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create new switcher</h2>
+<h2 mat-dialog-title>{{title}}</h2>
 <div mat-dialog-content class="content">
   <div>
     <form [formGroup]="form" autocomplete="off">
@@ -29,12 +29,12 @@
     </form>
 
     <mat-dialog-actions align="end">
-      <button mat-stroked-button color="primary" (click)="save()" [disabled]="form.invalid">
+      <button mat-stroked-button color="accent" (click)="save()" [disabled]="form.invalid">
         <mat-icon>
           save
         </mat-icon>
       </button>
-      <button mat-stroked-button (click)="close()">
+      <button mat-stroked-button color="primary" (click)="close()">
         <mat-icon>
           close
         </mat-icon>
