--- a/src/app/features/switchers/sites/switchers-site/switchers-site.component.html
+++ b/src/app/features/switchers/sites/switchers-site/switchers-site.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <div class="flex">
-    <div>Switchers</div>
+    <div class="title">Switchers</div>
     <div>
-      <button mat-fab color="accent" (click)="switchersService.refresh()">
+      <button mat-icon-button (click)="switchersService.refresh()">
         <mat-icon>refresh</mat-icon>
       </button>
     </div>
