--- a/src/app/features/switchers/components/switchers-list/switchers-list.component.scss
+++ b/src/app/features/switchers/components/switchers-list/switchers-list.component.scss
@@ -1,6 +1,11 @@
-.mat-fab {
+.mat-icon-button {
   position: absolute;
   right: 10px;
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+mat-list {
+  max-height: 72vh;
+  overflow: auto;
 }
