--- a/src/app/features/sensors/sites/sensors-site/sensors-site.component.html
+++ b/src/app/features/sensors/sites/sensors-site/sensors-site.component.html
@@ -5,4 +5,5 @@
     </div>
   </div>
 </mat-toolbar>
-<app-sensors-list [sensors]="sensorsService.sensors | async" [canEdit]="canEdit"></app-sensors-list>
+<app-sensors-list [sensors]="sensorsService.sensors | async" [canEdit]="canEdit"
+  (updateSensor)="sensorsService.updateSensor($event)"></app-sensors-list>
