--- a/src/app/features/sensors/components/edit-sensor/edit-sensor.component.html
+++ b/src/app/features/sensors/components/edit-sensor/edit-sensor.component.html
@@ -1,1 +1,34 @@
-<p>edit-sensor works!</p>
+<h2 mat-dialog-title>Edit sensor</h2>
+<div>
+  <div>
+    <div mat-dialog-content>
+      <form [formGroup]="form" autocomplete="off">
+        <mat-form-field>
+          <mat-label>Name</mat-label>
+          <input type="text" matInput formControlName="name">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Units</mat-label>
+          <input type="text" matInput formControlName="units">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Factor</mat-label>
+          <input type="number" matInput formControlName="factor">
+          <mat-hint>Factor of sensor value</mat-hint>
+        </mat-form-field>
+      </form>
+    </div>
+    <mat-dialog-actions align="end">
+      <button mat-stroked-button color="accent" (click)="dialogRef.close(form.value)">
+        <mat-icon>
+          save
+        </mat-icon>
+      </button>
+      <button mat-stroked-button color="primary" (click)="dialogRef.close()">
+        <mat-icon>
+          close
+        </mat-icon>
+      </button>
+    </mat-dialog-actions>
+  </div>
+</div>
