--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<mat-sidenav-container>
+  <mat-sidenav-content>
+    <mat-button-toggle-group class="margin-5-10">
+      <mat-button-toggle mat-button [routerLink]="['switchers']" routerLinkActive="mat-button-toggle-checked">Switchers
+      </mat-button-toggle>
+      <mat-button-toggle mat-button [routerLink]="['sensors']" routerLinkActive="mat-button-toggle-checked">Sensors
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 <router-outlet></router-outlet>
