--- a/src/app/features/switchers/components/switcher/switcher.component.html
+++ b/src/app/features/switchers/components/switcher/switcher.component.html
@@ -1,5 +1,5 @@
 <mat-list-item>
-  <div class="flex" (click)="stateChanged.next(switcher)">
+  <div class="flex rounded" (click)="stateChanged.next(switcher)" matRipple>
     <div>{{switcher.name}}</div>
     <div>
       <span>
