--- a/src/app/features/switchers/components/switcher/switcher.component.scss
+++ b/src/app/features/switchers/components/switcher/switcher.component.scss
@@ -1,4 +1,5 @@
-.flex {
-  width: 100%;
-  justify-content: space-between;
+.rounded {
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0 5px;
 }
