extended sensor model

--- a/src/app/features/sensors/sites/sensors-site/sensors-site.component.html
+++ b/src/app/features/sensors/sites/sensors-site/sensors-site.component.html
@@ -5,7 +5,7 @@
     </div>
     <div *ngIf="sensorsService.error">
       <button mat-icon-button (click)="sensorsService.refresh()">
-        <mat-icon>refresh</mat-icon>
+        <mat-icon>sync</mat-icon>
       </button>
     </div>
   </div>
