--- a/src/app/features/sensors/components/edit-sensor/edit-sensor.component.html
+++ b/src/app/features/sensors/components/edit-sensor/edit-sensor.component.html
@@ -16,6 +16,10 @@
           <input type="number" matInput formControlName="factor">
           <mat-hint>Factor of sensor value</mat-hint>
         </mat-form-field>
+        <mat-form-field>
+          <mat-label>Equation const</mat-label>
+          <input type="number" matInput formControlName="equationConst">
+        </mat-form-field>
       </form>
     </div>
     <mat-dialog-actions align="end">
