--- a/src/app/features/switchers/components/manipulate-switcher/manipulate-switcher.component.html
+++ b/src/app/features/switchers/components/manipulate-switcher/manipulate-switcher.component.html
@@ -8,7 +8,7 @@
         <mat-hint>Name for your switcher</mat-hint>
         <mat-error *ngIf="form.get('name').hasError('required')">Field is <strong>required</strong></mat-error>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field *ngIf="baseSwitcher.address">
         <mat-label>Pin</mat-label>
         <mat-select formControlName="address" required>
           <mat-option *ngFor="let pin of pinList" [value]="pin">
