fixed comma part

--- a/src/app/features/sensors/components/sensor/sensor.component.html
+++ b/src/app/features/sensors/components/sensor/sensor.component.html
@@ -1,7 +1,7 @@
 <mat-list-item>
   <div class="flex">
     <div>
-      <span>{{sensor.name}}</span>: <span>{{sensor.value}} {{sensor.units}}</span>
+      <span>{{sensor.name}}</span>: <span>{{sensor.value | toFixed}} {{sensor.units}}</span>
     </div>
     <div *ngIf="canEdit">
       <button mat-icon-button color="primary" (click)="edit.next(sensor)" stopPropagation>
