some fixes, styling, prettier fix

--- a/src/app/features/switchers/components/switcher/switcher.component.html
+++ b/src/app/features/switchers/components/switcher/switcher.component.html
@@ -1,5 +1,5 @@
-<mat-list-item>
-  <div class="flex rounded p-0-5" (click)="stateChanged.next(switcher)" matRipple>
+<mat-list-item class="full-height">
+  <div class="flex rounded p-0-5 pointer" (click)="stateChanged.next(switcher)" matRipple>
     <div>{{switcher.name}}</div>
     <div>
       <span>
