--- a/src/app/features/switchers/components/delete-switcher/delete-switcher.component.html
+++ b/src/app/features/switchers/components/delete-switcher/delete-switcher.component.html
@@ -1,13 +1,11 @@
-<div class="content">
+<div class='content'>
   Are you sure you want to delete switcher {{data?.name || data?.pinNumber}}?
 </div>
-<div class="flex">
-  <div>
-    <button mat-stroked-button color="warn" (click)="dismiss(true)">
-      <mat-icon>done</mat-icon>
-    </button>
-    <button mat-raised-button color="primary" (click)="dismiss(false)">
-      <mat-icon>cancel</mat-icon>
-    </button>
-  </div>
+<div class='flex'>
+  <button mat-stroked-button color='warn' (click)='dismiss(true)'>
+    <mat-icon>done</mat-icon>
+  </button>
+  <button mat-raised-button color='primary' (click)='dismiss(false)'>
+    <mat-icon>cancel</mat-icon>
+  </button>
 </div>
