--- a/src/app/features/scheduling/components/period-control/period-control.component.html
+++ b/src/app/features/scheduling/components/period-control/period-control.component.html
@@ -1,9 +1,11 @@
-<form [formGroup]='form' autocomplete='off'>
-  <mat-form-field (click)='onTouch()'>
+<form [formGroup]='form' autocomplete='off' (click)='onTouch()' class='flex'>
+  <mat-form-field>
     <mat-label>Period amount</mat-label>
     <input type='number' matInput formControlName='amount'>
+    <mat-error *ngIf='form.get("amount").hasError("required")'>Field is required</mat-error>
+    <mat-error *ngIf='form.get("amount").hasError("min")'>Value can't be less then 1</mat-error>
   </mat-form-field>
-  <mat-form-field (click)='onTouch()'>
+  <mat-form-field>
     <mat-label>Time unit</mat-label>
     <mat-select formControlName='unit'>
       <mat-option *ngFor='let unit of getUnits()' [value]='unit'>
